2002-04-10  Danny Smith  <dannysmith@sourceforge.users.net>

	* mingwex/mingw-fseek.c: New file, based on Mumit Khan
	mingw-local patch to binutils.
	Sun Nov  7 04:27:07 1999  Mumit Khan  <khan@xraylith.wisc.edu>
	(__mingw_fseek): New function to work around Win9x f/lseek bug.
	(__mingw_fwrite): Likewise.
	(__mingw_is_win9x): New helper function.
	* include/stdio.h (__USE_MINGW_FSEEK): New define,guarding...
	(__mingw_fseek): New prototype and define to replace fseek.
	(__mingw_fwrite): New prototype and define to replace fwrite.
	* mingwex/Makefile.in: Add mingw-fseek.o to libmingwex.a.

	* moldname-crtdll.def: Remove CR from end of line.
	* moldname-msvcrt.def: Ditto.

2002-04-09  Danny Smith  <dannysmith@sourceforge.users.net>

	* profile/configure.in (CRT0S): Configure name of gcrt?.o
	based on target, building gcrt0.o for cygwin -mno-cygwin.
	* profile/configure: Regenerate.
	* profile/Makefile.in (CRT0S): Use name from configure.
	(gcrt0.o): New rule.   
	(ALL_CRT0S): New define, used to cleanup all gcrt?.o's.

2002-04-04  Danny Smith  <dannysmith@sourceforge.users.net>

	* include/math.h (DOMAIN, SING, OVERFLOW, UNDERFLOW,
	TLOSS, PLOSS): Move oldname defines back, following
	the underscored names.
	(_controlfp, _control87, _clearfp, _statusfp, _fpreset,
	_fpecode): Remove prototypes copied from float.h.
	(nan, nanf): Move into block protected against RC_INVOKED
	and __cplusplus.
	* include/stdlib.h (_Exit): Change from static inline to
	extern inline.
	* mingwex/_Exit.c : New file.
	* mingwex/Makefile.in: Add _Exit.o to libmingwex.a.

2002-04-04  Danny Smith  <dannysmith@sourceforge.users.net>

	Add libgmon.a and libmingwex.a for cygwin -mno-cygwin.
	* configure.in (SUBDIRS): Add  profile and mingwex to cygwin target.
	(configdirs): Likewise.
	(LIBGMON_A): Define for cygwin target as well.
	* configure: Regenerate.
	* profile/configure.in (THREAD_DLL): Remove define.
	(LIBM_A): Remove define.
	(LIBGMON_A): Define for cygwin target as well.